--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             background-color: hsl(0, 0%, 100%);
             padding: 20px;
             border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 8px #fff8fc;
             max-width: 600px;
             margin-top: 20px;
             /* Added margin to push the content down */
