--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
             border-radius: 10px;
             box-shadow: 0 4px 8px #fff8fc;
             max-width: 800px;
-            margin-top: 20px;
+            margin-top: 100px;
             /* Added margin to push the content down */
             width: 100%;
             box-sizing: border-box;
             text-align: center;
-            padding: 35px;
+            padding: 20px;
         }
         
         .container-m img {
@@ -60,7 +60,7 @@
         }
         
         .preparation-time {
-            background-color: hsl(30, 54%, 90%);
+            background-color: #fff8fc;
             text-align: left;
             padding: 35px;
             /* Adjust padding as needed */
